# placanje_core

./: .gitignore  README.md  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  run_dev.sh  run_prod.sh
backend/app/: __init__.py  jobs.py  main.py
backend/app/api/v1/: consumer.py  dev.py  merchant.py  pos.py  public.py  router.py  webhooks.py
backend/app/core/: __init__.py  auth.py  config.py  db.py  deps.py  errors.py  logging.py  pos_security.py
backend/app/domain/: auth.py  bank_pos.py  enums.py  models.py  qr.py  validators.py
backend/app/repositories/: bank_profiles.py  invites.py  merchant_accounts.py  pos_auth.py  share_links.py  subscriptions.py  transactions.py  users.py
backend/app/services/: auth_sessions.py  bank_pos.py  bank_webhooks.py  consumer.py  merchant.py  pos.py  subscriptions.py  transactions.py
backend/supabase/: seed.sql
backend/supabase/migrations/: 0001_init.sql  0002_enable_realtime.sql  0003_legacy_shared_slips_staging.sql  0004_shared_slips_import_compat.sql  0005_pending_invites.sql  0006_bank_integration_foundation.sql  0007_pos_credentials.sql
backend/tests/unit/: test_auth.py  test_bank_webhook_service.py  test_merchant_service.py  test_pos_service.py  test_public_transaction_service.py  test_qr.py  test_transaction_repository.py  test_validators.py
bank/: IP POS Backend Merchant API Description v1.0.3.docx  OpisProcesaZaTrgovca.docx
tester/: README.md  index.html  package-lock.json  package.json  tsconfig.json
tester/src/: App.tsx  api.ts  content.ts  styles.css
